--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@
 /[Oo]bj/
 /[Bb]uild/
 /[Bb]uilds/
-/UnityPackageManager/
+/[P]packages/
+/[U]unityPackageManager/
 /Assets/AssetStoreTools*
 
 # Visual Studio 2017 and Rider cache directory
